--- a/Gallery/Timeline/Year at a glance.html
+++ b/Gallery/Timeline/Year at a glance.html
@@ -19,15 +19,15 @@
         <div class="month april-may">
             <h2>April - May</h2>
             <div class="events">
-                <div class="event">Transition to online learning and teaching <img src="./Images/April1.png" alt="Transition to online learning and teaching"></div>
-                <div class="event">Online school elections <img src="./Images/April-May Online Elections.png" alt="Online School Elections"></div>
+                <div class="event">Transition to online learning and teaching <img style="border-radius: 5px;" src="./Images/April1.png" alt="Transition to online learning and teaching"></div>
+                <div class="event">Online school elections <img style="border-radius: 5px;" src="./Images/April-May Online Elections.png" alt="Online School Elections"></div>
                 <div class="event">Virtual meets and Conferences</div>
             </div>
         </div>
         <div class="month june">
             <h2>June</h2>
             <div class="events">
-                <div class="event">HMUN Dubai <img src="./Images/June HMUN.png" alt="HMUN Dubai"></div>
+                <div class="event">HMUN Dubai <img style="border-radius: 5px;" src="./Images/June HMUN.png" alt="HMUN Dubai"></div>
             </div>
         </div>
         <div class="month july">
@@ -37,7 +37,7 @@
                 <div class="event">Mental Health Awareness Session Ms.Aanchal Vashistha</div>
                 <div class="event">Online Mental Health & Wellness Workshop with Mrs. Jhunjhunwala.</div>
                 <div class="event">Lifestyle Diseases and Oral Health Session- Rotary</div>
-                <div class="event">ILS Webinar- Navigating New Normal With Strengthened Bonds. <img src="./Images/July Navigating New Normal.png" alt="ILS Webinar- Navigating New Normal With Strengthened Bonds"></div>
+                <div class="event">ILS Webinar- Navigating New Normal With Strengthened Bonds. <img style="border-radius: 5px;" src="./Images/July Navigating New Normal.png" alt="ILS Webinar- Navigating New Normal With Strengthened Bonds"></div>
                 <div class="event">Parents’ Orientations on Digital Education in the New Normal.</div>
             </div>
         </div>
@@ -45,23 +45,23 @@
             <i class="fa fa-youtube-play" onclick="window.location.href = 'https://www.youtube.com/watch?v=7_nGpnXaJFk'" style="font-size:20px;"></i>
             <h2>August</h2>
             <div class="events">
-                <div class="event">Zero Hour Online Debate Competition <img src="./Images/August1.png" alt="Zero Hour Online Debate Competition"></div>
+                <div class="event">Zero Hour Online Debate Competition <img style="border-radius: 5px;" src="./Images/August1.png" alt="Zero Hour Online Debate Competition"></div>
                 <div class="event">Service Opens Opportunities.- Rotary International</div>
                 <div class="event">HMUN India</div>
                 <div class="event">International Reasoning and Aptitude Test, IRAO:The General Knowledge and Aptitude Olympiad</div>
-                <div class="event">Creative Competition- Best Out Of Waste- PTA <img src="./Images/August4.png" alt="Creative Competition- Best Out Of Waste- PTA "></div>
+                <div class="event">Creative Competition- Best Out Of Waste- PTA <img style="border-radius: 5px;" src="./Images/August4.png" alt="Creative Competition- Best Out Of Waste- PTA "></div>
                 <div class="event">Arwachin Inter School Online Debate Competition</div>
                 <div class="event">Meeting With Ex- ILS Principal & Present Trustee of ILS Dr(Mrs.) Suman Kanwar</div>
-                <div class="event">Annual Prize Giving <img src="./Images/August7.png" alt="Annual Prize Giving"></div>
-                <div class="event">Online webinar with Dr. Joseph Emmanuel, Director Academics, CBSE India <img src="./Images/August Dr Joseph Emmanuel.png" alt="Online webinar with Dr. Joseph Emmanuel, Director Academics, CBSE India"></div>
+                <div class="event">Annual Prize Giving <img style="border-radius: 5px;" src="./Images/August7.png" alt="Annual Prize Giving"></div>
+                <div class="event">Online webinar with Dr. Joseph Emmanuel, Director Academics, CBSE India <img style="border-radius: 5px;" src="./Images/August Dr Joseph Emmanuel.png" alt="Online webinar with Dr. Joseph Emmanuel, Director Academics, CBSE India"></div>
             </div>
         </div>
         <div class="month september">
             <i class="fa fa-youtube-play" onclick="window.location.href = 'https://www.youtube.com/watch?v=bZGA79eTaCM'" style="font-size:20px;"></i>
             <h2>September</h2>
             <div class="events">
-                <div class="event">Teachers’ Day Celebrations<img src="./Images/September1.png" alt="Teachers’ Day Celebrations"> </div>
-                <div class="event">Indian High Commission Facilitation <img src="./Images/September Indian High Commision.png" alt="Indian High Commission Facilitation"></div>
+                <div class="event">Teachers’ Day Celebrations<img style="border-radius: 5px;" src="./Images/September1.png" alt="Teachers’ Day Celebrations"> </div>
+                <div class="event">Indian High Commission Facilitation <img style="border-radius: 5px;" src="./Images/September Indian High Commision.png" alt="Indian High Commission Facilitation"></div>
                 <div class="event">Half Yearly Online Examinations</div>
                 <div class="event">Greenagers- International School Award Collaborative Programme</div>
                 <div class="event">The British Council’s ISA Collaborating Project- 'Nutrilicious'</div>
@@ -75,7 +75,7 @@
                 <div class="event">World Students’ Day</div>
                 <div class="event">Virtual Pet Day</div>
                 <div class="event">Dear Committee-session With Best Selling Author Ms Anjali Kripalani.</div>
-                <div class="event">Zoom Session With A Holocaust Survivor- Mr. Michael Herkovitz <img src="./Images/October5.png" alt="Zoom Session With A Holocaust Survivor- Mr. Michael Herkovitz"> </div>
+                <div class="event">Zoom Session With A Holocaust Survivor- Mr. Michael Herkovitz <img style="border-radius: 5px;" src="./Images/October5.png" alt="Zoom Session With A Holocaust Survivor- Mr. Michael Herkovitz"> </div>
                 <div class="event">Parent Teacher Meeting</div>
                 <div class="event">Grandparents Day</div>
                 <div class="event">Ekta Diwas</div>
@@ -85,11 +85,11 @@
             <i class="fa fa-youtube-play" onclick="window.location.href = 'https://www.youtube.com/watch?v=mxMw8fa1im4'" style="font-size:20px;"></i>
             <h2>November</h2>
             <div class="events">
-                <div class="event">IT Integrated Learning Webinars <img src="./Images/November1.png" alt="It Integrated Learning Webinars"></div>
+                <div class="event">IT Integrated Learning Webinars <img style="border-radius: 5px;" src="./Images/November1.png" alt="It Integrated Learning Webinars"></div>
                 <div class="event">Science Days</div>
-                <div class="event">Interaction With Honourable Minister Sadhvi Niranjan Jyoti<img src="./Images/November3.png" alt="Interaction With Honourable Minister Sadhvi Niranjan Jyoti"></div>
+                <div class="event">Interaction With Honourable Minister Sadhvi Niranjan Jyoti<img style="border-radius: 5px;" src="./Images/November3.png" alt="Interaction With Honourable Minister Sadhvi Niranjan Jyoti"></div>
                 <div class="event">Diwali Celebrations</div>
-                <div class="event">Children’s Day <img src="./Images/November5.png" alt="Children’s Day"></div>
+                <div class="event">Children’s Day <img style="border-radius: 5px;" src="./Images/November5.png" alt="Children’s Day"></div>
                 <div class="event">Constitutional Day</div>
                 <div class="event">CBSE Drama</div>
                 <div class="event">Pathos Mun</div>
@@ -100,9 +100,9 @@
             <i class="fa fa-youtube-play" onclick="window.location.href = 'https://www.youtube.com/watch?v=tM-EQhEuFQE'" style="font-size:20px;"></i>
             <h2>December</h2>
             <div class="events">
-                <div class="event">Fit India<img src="./Images/December1.png" alt="Fit India"></div>
+                <div class="event">Fit India<img style="border-radius: 5px;" src="./Images/December1.png" alt="Fit India"></div>
                 <div class="event">Mathematics Day</div>
-                <div class="event">Christmas Celebrations <img src="./Images/December.png" alt="Christmas Celebrations"></div>
+                <div class="event">Christmas Celebrations <img style="border-radius: 5px;" src="./Images/December.png" alt="Christmas Celebrations"></div>
             </div>
         </div>
         <div class="month january">
@@ -110,9 +110,9 @@
             <h2>January</h2>
             <div class="events">
                 <div class="event">Zenik International Olympiad</div>
-                <div class="event">Financial Miners Reached The Regional Finals of the WGHS Investment Competition. <img src="./Images/January2.png" alt="Financial Miners Reached The Regional Finals of the WGHS Investment Competition."></div>
+                <div class="event">Financial Miners Reached The Regional Finals of the WGHS Investment Competition. <img style="border-radius: 5px;" src="./Images/January2.png" alt="Financial Miners Reached The Regional Finals of the WGHS Investment Competition."></div>
                 <div class="event">Republic Day Celebrations</div>
-                <div class="event">Toycathon <img src="./Images/January3.png" alt="Toycathon"></div>
+                <div class="event">Toycathon <img style="border-radius: 5px;" src="./Images/January3.png" alt="Toycathon"></div>
             </div>
         </div>
         <div class="month february">
@@ -121,9 +121,9 @@
             <div class="events">
                 <div class="event">Poetry Recitation</div>
                 <div class="event">Study Skill Workshop</div>
-                <div class="event">RBI Money Matters <img src="./Images/February3.png" alt="RBI Money Matters"></div>
+                <div class="event">RBI Money Matters <img style="border-radius: 5px;" src="./Images/February3.png" alt="RBI Money Matters"></div>
                 <div class="event">Education Life In The New Normal- Mr. Abhyanand</div>
-                <div class="event">Coding Camp (By Art Integration Committee) <img src="./Images/February5.png" alt="Coding Camp (By Art Integration Committee)"></div>
+                <div class="event">Coding Camp (By Art Integration Committee) <img style="border-radius: 5px;" src="./Images/February5.png" alt="Coding Camp (By Art Integration Committee)"></div>
                 <div class="event">Fancy Dress Competition</div>
             </div>
         </div>
@@ -132,9 +132,9 @@
             <h2>March</h2>
             <div class="events">
 
-                <div class="event">Proctored Examinations <img src="./Images/March1.png" alt="Proctored Examinations"></div>
+                <div class="event">Proctored Examinations <img style="border-radius: 5px;" src="./Images/March1.png" alt="Proctored Examinations"></div>
                 <div class="event">Online Entrance Exam</div>
-                <div class="event">Gr XII Farewell <img src="./Images/March2.png" alt="Gr XII Farewell"></div>
+                <div class="event">Gr XII Farewell <img style="border-radius: 5px;" src="./Images/March2.png" alt="Gr XII Farewell"></div>
                 <div class="event">Outside Laurels</div>
             </div>
         </div>
@@ -194,7 +194,7 @@
             left: 0px;
         }
         
-        img {
+        img style="border-radius: 5px;" {
             width: 100%;
             margin-top: 10px;
             margin-bottom: -7px;
