--- a/Gallery/Timeline/Year at a glance.html
+++ b/Gallery/Timeline/Year at a glance.html
@@ -194,7 +194,7 @@
             left: 0px;
         }
         
-        img style="border-radius: 5px;" {
+        img{
             width: 100%;
             margin-top: 10px;
             margin-bottom: -7px;
