--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600;800&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="icon.svg" type="image/x-icon">
+    <meta name="keywords" content="Flying High Magazine, Flying, High, Magazine, Indian Language School, Indian, Language, School, Gaurav Shah, Sneha Mohnani, Shergill, 2020-21, 2020, 2021, History, Historic Magazine, ILS, Coded">
+    <meta name="description" content="The historic 2020-21 Flying High Magazine written, designed and coded by students.">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Gaurav Shah">
+    <meta name="google-site-verification" content="RC7TkAa_koNR1XtFajNFW6PfNgWbkOdE-jhFul3Stxk" />
+
+
 </head>
 
 <body>
