--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                     <li>Mrs Ishita Yadav - Vice Principal-2</li>
                     <li>Mrs Bindu Mathew - Head of Exam Department and Co-ordinator</li>
                     <li>Mrs Rashmi Lakhanpal - Head of Curriculum Development and Senior Co-ordinator</li>
-                    <li>Mrs Geetanjali Bajaj - co- ordinator</li>
+                    <li>Mrs Geetanjali Bajaj - Co-ordinator</li>
                     <li>Mrs Gursharan Shergill - Supervisor</li>
                 </ol>
             </div>
