--- a/Teachers/index.html
+++ b/Teachers/index.html
@@ -139,11 +139,8 @@
             <div class="swiper-slide"><img src="./Teacher Images/Office.svg">
                 <p>Principal with Office Staff</p>
             </div>
-            <div class="swiper-slide"><img src="./Teacher Images/Office.svg">
-                <p>Principal with Office Staff</p>
-            </div>
             <div class="swiper-slide"><img loading='lazy' src="./Teacher Images/Math.svg">
-                <p>Math Teachers</p>
+                <p>Mathematics Teachers</p>
             </div>
             <div class="swiper-slide"><img loading='lazy' src="./Teacher Images/Hindi.svg">
                 <p>Hindi Teachers</p>
@@ -173,6 +170,9 @@
             <div class="swiper-slide">
                 <img src="./Teacher Images/Activity.svg">
                 <p>Activity Teachers</p>
+            </div>
+            <div class="swiper-slide"><img src="./Teacher Images/PE.svg">
+                <p>Physical Education Teachers</p>
             </div>
 
 
