--- a/Teachers/index.html
+++ b/Teachers/index.html
@@ -171,7 +171,7 @@
                 <img src="./Teacher Images/Activity.svg">
                 <p>Activity Teachers</p>
             </div>
-            <div class="swiper-slide"><img src="./Teacher Images/PE.svg">
+            <div class="swiper-slide"><img src="./Teacher Images/PE.png">
                 <p>Physical Education Teachers</p>
             </div>
 
