Update Year at a glance.html

--- a/Gallery/Timeline/Year at a glance.html
+++ b/Gallery/Timeline/Year at a glance.html
@@ -20,7 +20,7 @@
             <h2>April - May</h2>
             <div class="events">
                 <div class="event">Transition to online learning and teaching <img style="border-radius: 5px;" src="./Images/April1.png" alt="Transition to online learning and teaching"></div>
-                <div class="event">Online school elections <img style="border-radius: 5px;" src="./Images/April-May Online Elections.png" alt="Online School Elections"></div>
+                <div class="event">Online school elections <img style="border-radius: 5px;" src="./Images/Online Elections.png" alt="Online School Elections"></div>
                 <div class="event">Virtual meets and Conferences</div>
             </div>
         </div>
@@ -51,7 +51,7 @@
                 <div class="event">International Reasoning and Aptitude Test, IRAO:The General Knowledge and Aptitude Olympiad</div>
                 <div class="event">Creative Competition- Best Out Of Waste- PTA <img style="border-radius: 5px;" src="./Images/August4.png" alt="Creative Competition- Best Out Of Waste- PTA "></div>
                 <div class="event">Arwachin Inter School Online Debate Competition</div>
-                <div class="event">Meeting With Ex- ILS Principal & Present Trustee of ILS Dr(Mrs.) Suman Kanwar</div>
+                <div class="event">Meeting With Ex- ILS Principal & Present Trustee of ILS Dr(Mrs.) Suman Kanwar<img style="border-radius: 5px;" src="./Images/Meeting with Dr. (Mrs) S. Kanwar.png" alt="Meeting With Ex- ILS Principal & Present Trustee of ILS Dr(Mrs.) Suman Kanwar"></div>
                 <div class="event">Annual Prize Giving <img style="border-radius: 5px;" src="./Images/August7.png" alt="Annual Prize Giving"></div>
                 <div class="event">Online webinar with Dr. Joseph Emmanuel, Director Academics, CBSE India <img style="border-radius: 5px;" src="./Images/August Dr Joseph Emmanuel.png" alt="Online webinar with Dr. Joseph Emmanuel, Director Academics, CBSE India"></div>
             </div>
@@ -90,7 +90,7 @@
                 <div class="event">Interaction With Honourable Minister Sadhvi Niranjan Jyoti<img style="border-radius: 5px;" src="./Images/November3.png" alt="Interaction With Honourable Minister Sadhvi Niranjan Jyoti"></div>
                 <div class="event">Diwali Celebrations</div>
                 <div class="event">Children’s Day <img style="border-radius: 5px;" src="./Images/November5.png" alt="Children’s Day"></div>
-                <div class="event">Constitutional Day</div>
+                <div class="event">Constitutional Day<img style="border-radius: 5px;" src="./Images/Constitution Day.png" alt="Constitutional Day"></div>
                 <div class="event">CBSE Drama</div>
                 <div class="event">Pathos Mun</div>
 
@@ -111,7 +111,7 @@
             <div class="events">
                 <div class="event">Zenik International Olympiad</div>
                 <div class="event">Financial Miners Reached The Regional Finals of the WGHS Investment Competition. <img style="border-radius: 5px;" src="./Images/January2.png" alt="Financial Miners Reached The Regional Finals of the WGHS Investment Competition."></div>
-                <div class="event">Republic Day Celebrations</div>
+                <div class="event">Republic Day Celebrations<img style="border-radius: 5px;" src="./Images/Republic Day.png" alt="Republic Day Celebrations"></div>
                 <div class="event">Toycathon <img style="border-radius: 5px;" src="./Images/January3.png" alt="Toycathon"></div>
             </div>
         </div>
@@ -122,7 +122,7 @@
                 <div class="event">Poetry Recitation</div>
                 <div class="event">Study Skill Workshop</div>
                 <div class="event">RBI Money Matters <img style="border-radius: 5px;" src="./Images/February3.png" alt="RBI Money Matters"></div>
-                <div class="event">Education Life In The New Normal- Mr. Abhyanand</div>
+                <div class="event"><img style="border-radius: 5px;" src="./Images/Meeting with Mr Abhyanand.png" alt="Education Life In The New Normal- Mr. Abhyanand"></div>
                 <div class="event">Coding Camp (By Art Integration Committee) <img style="border-radius: 5px;" src="./Images/February5.png" alt="Coding Camp (By Art Integration Committee)"></div>
                 <div class="event">Fancy Dress Competition</div>
             </div>
@@ -132,7 +132,7 @@
             <h2>March</h2>
             <div class="events">
 
-                <div class="event">Proctored Examinations <img style="border-radius: 5px;" src="./Images/March1.png" alt="Proctored Examinations"></div>
+                <div class="event">Proctored Examinations <img style="border-radius: 5px;" src="./Images/Proctored Exam.png" alt="Proctored Examinations"></div>
                 <div class="event">Online Entrance Exam</div>
                 <div class="event">Gr XII Farewell <img style="border-radius: 5px;" src="./Images/March2.png" alt="Gr XII Farewell"></div>
                 <div class="event">Outside Laurels</div>
