--- a/HomePage/Editorial.html
+++ b/HomePage/Editorial.html
@@ -32,23 +32,23 @@
 
 <div class="team">
     <div class="team-member">
-        <img src="member1.jpg" alt="Team Member 1" class="member-img" onclick="window.location.href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'">
+        <img src="member1.jpg" alt="Team Member 1" class="member-img">
         <h3 class="member-name">Gaurav Shah</h3>
     </div>
     <div class="team-member">
-        <img src="member2.jpeg" alt="Team Member 2" class="member-img" onclick="window.location.href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'">
+        <img src="member2.jpeg" alt="Team Member 2" class="member-img">
         <h3 class="member-name">Nirjhar Datta</h3>
     </div>
     <div class="team-member">
-        <img src="member2.JPG" alt="Team Member 3" class="member-img" onclick="window.location.href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'">
+        <img src="member2.JPG" alt="Team Member 3" class="member-img">
         <h3 class="member-name">Rahul Philip Mathew</h3>
     </div>
     <div class="team-member">
-        <img src="member3.jpeg" alt="Team Member 4" class="member-img" onclick="window.location.href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'">
+        <img src="member3.jpeg" alt="Team Member 4" class="member-img">
         <h3 class="member-name">Prakarsh Srivastava</h3>
     </div>
     <div class="team-member">
-        <img src="member5.png" alt="Team Member 5" class="member-img" onclick="window.location.href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'">
+        <img src="member5.png" alt="Team Member 5" class="member-img">
         <h3 class="member-name">Puranjay Gambhir</h3>
     </div>
 </div>
