--- a/HomePage/Editorial.html
+++ b/HomePage/Editorial.html
@@ -32,7 +32,7 @@
 
 <div class="team">
     <div class="team-member">
-        <img src="member1.jpg" alt="Team Member 1" class="member-img">
+        <img src="member1.png" alt="Team Member 1" class="member-img">
         <h3 class="member-name">Gaurav Shah</h3>
     </div>
     <div class="team-member">
