--- a/Laurels/Laurels.html
+++ b/Laurels/Laurels.html
@@ -99,7 +99,7 @@
 
         <tr>
             <td>1.</td>
-            <td>Global High School Investment Competion</td>
+            <td>Global High School Investment Competition</td>
             <td>
                 <ol>
                     <li>Gaurav Shah (XI)</li>
