--- a/Laurels/Laurels.html
+++ b/Laurels/Laurels.html
@@ -492,7 +492,7 @@
 
         <tr>
             <td>25.</td>
-            <td>Commision Nationale DELF DALF</td>
+            <td>Commission Nationale DELF DALF</td>
             <td>
                 <ul>
                     <li>
