--- a/Committees/C_HTML/CC.html
+++ b/Committees/C_HTML/CC.html
@@ -17,7 +17,7 @@
         <div class="banner">
             <img src='../C_Logos/CC.svg' alt='Charity Committee Logo' class="logo">
             <h1>Charity Committee</h1>
-            <h4>Teacher head: Mrs.D.Dixit<br>Student Heads: Heeral Gopaldasani and Rushil Dhanuka</h4>
+            <h4>Teacher Head: Mrs. D. Dixit<br>Student Heads: Heeral Gopaldasani and Rushil Dhanuka</h4>
         </div>
         <div class="members">
             <h3>Committee Members</h3>
