--- a/Committees/C_HTML/CCC.html
+++ b/Committees/C_HTML/CCC.html
@@ -17,7 +17,7 @@
         <div class="banner">
             <img src='../C_Logos/CCC.svg' alt='Career Counselling  Committee Logo' class="logo">
             <h1>Career Counselling Committee</h1>
-            <h4>Teacher head: Mrs.S.Tandon <br>Student Heads: Tanya Tiwari and Shivansh Vaid</h4>
+            <h4>Teacher Head: Mrs. S. Tandon <br>Student Heads: Tanya Tiwari and Shivansh Vaid</h4>
         </div>
         <div class="members">
             <h3>Committee Members</h3>
