--- a/Committees/C_HTML/DC.html
+++ b/Committees/C_HTML/DC.html
@@ -18,7 +18,7 @@
             <div class="banner">
                 <img src='../C_Logos/DC.svg' alt='Discipline Committee Logo' class="logo">
                 <h1>Discipline Committee</h1>
-                <h4>Teacher head: Mrs.P.Gopal<br>Student Heads: Michelle Singh and Vidit Saxena</h4>
+                <h4>Teacher Head: Mrs. P. Gopal<br>Student Heads: Michelle Singh and Vidit Saxena</h4>
             </div>
             <div class="members">
                 <h3>Committee Members</h3>
