--- a/Committees/C_HTML/EC.html
+++ b/Committees/C_HTML/EC.html
@@ -18,7 +18,7 @@
             <div class="banner">
                 <img src='../C_Logos/EC.svg' alt='Events Committee Logo' class="logo">
                 <h1>Events Committee</h1>
-                <h4>Teacher head: :  Mrs.I.Yadav & Mrs.G.Singh<br>Student Heads: Shubham Vyas and Arundhati Manoj</h4>
+                <h4>Teacher Heads: Mrs. I. Yadav & Mrs. G. Singh<br>Student Heads: Shubham Vyas and Arundhati Manoj</h4>
             </div>
             <div class="members">
                 <h3>Committee Members</h3>
