--- a/Committees/C_HTML/ECOC.html
+++ b/Committees/C_HTML/ECOC.html
@@ -18,7 +18,7 @@
             <div class="banner">
                 <img src='../C_Logos/ECOC.svg' alt='Eco Club Logo' class="logo">
                 <h1>Eco Club</h1>
-                <h4>Teacher head: Dr.(Mrs.)M.Jain<br>Student Head: Avantika Singh</h4>
+                <h4>Teacher Head: Dr.(Mrs.) M. Jain<br>Student Head: Avantika Singh</h4>
             </div>
             <div class="members">
                 <h3>Committee Members</h3>
