--- a/Committees/C_HTML/HOLC.html
+++ b/Committees/C_HTML/HOLC.html
@@ -179,7 +179,7 @@
             <div class="banner">
                 <img src='../C_Logos/HOLC.svg' alt='Hubs Of Learning Committee Logo' class="logo">
                 <h1>Hubs Of Learning Committee</h1>
-                <h4>Teacher head: Dr.(Mrs.)M.Jain<br>Student Heads: Akash Balaji and Anahita Sharma</h4>
+                <h4>Teacher Head: Dr.(Mrs.) M. Jain<br>Student Heads: Akash Balaji and Anahita Sharma</h4>
             </div>
             <div class="members">
                 <h3>Committee Members</h3>
