--- a/Committees/C_HTML/LSC.html
+++ b/Committees/C_HTML/LSC.html
@@ -179,7 +179,7 @@
             <div class="banner">
                 <img src='../C_Logos/LSC.svg' alt='Life Skills Committee Logo' class="logo">
                 <h1>Life Skills Committee</h1>
-                <h4>Teacher head: Mrs.S.De<br>Student Head: Sakshi Pandey</h4>
+                <h4>Teacher Head: Mrs. S. De<br>Student Head: Sakshi Pandey</h4>
             </div>
             <div class="members">
                 <h3>Committee Members</h3>
