--- a/Committees/C_HTML/MC.html
+++ b/Committees/C_HTML/MC.html
@@ -179,7 +179,7 @@
             <div class="banner">
                 <img src='../C_Logos/MC.svg' alt='Magazine Committee Logo' class="logo">
                 <h1>Magazine Committee</h1>
-                <h4>Teacher head: Mrs.G.Shergill<br>Student Head: Mousoomi Shit</h4>
+                <h4>Teacher Head: Mrs. G. Shergill<br>Student Head: Mousoomi Shit</h4>
             </div>
             <div class="members">
                 <h3>Committee Members</h3>
