--- a/Committees/C_HTML/MHAWBC.html
+++ b/Committees/C_HTML/MHAWBC.html
@@ -18,7 +18,7 @@
             <div class="banner">
                 <img src='../C_Logos/MHAWBC.svg' alt='Mental Health and Well Being Committee Logo' class="logo">
                 <h1>Mental Health and Well Being Committee</h1>
-                <h4>Teacher head: Dr.(Mrs.)S.Jamloki<br>Student Heads: Omkar Rai and Nandini Jagtiani</h4>
+                <h4>Teacher Head: Dr.(Mrs.) S. Jamloki<br>Student Heads: Omkar Rai and Nandini Jagtiani</h4>
             </div>
             <div class="members">
                 <h3>Committee Members</h3>
