--- a/Committees/C_HTML/MUN.html
+++ b/Committees/C_HTML/MUN.html
@@ -18,7 +18,7 @@
             <div class="banner">
                 <img src='../C_Logos/MUN.svg' alt='Model United Nations Committee Logo' class="logo">
                 <h1>Model United Nations Committee</h1>
-                <h4>Teacher head: Mrs.L.Dam<br>Student Heads: Pranay Kabra and Gayatri Sudhakaran</h4>
+                <h4>Teacher Head: Mrs. L. Dam<br>Student Heads: Pranay Kabra and Gayatri Sudhakaran</h4>
             </div>
             <div class="members">
                 <h3>Committee Members</h3>
