--- a/Committees/C_HTML/PDC.html
+++ b/Committees/C_HTML/PDC.html
@@ -18,7 +18,7 @@
             <div class="banner">
                 <img src='../C_Logos/PDC.svg' alt='Personality Development Committee Logo' class="logo">
                 <h1>Personality Development Committee</h1>
-                <h4>Teacher head: Mrs.N.Jha<br>Student Head: Abeni Datta</h4>
+                <h4>Teacher Head: Mrs. N. Jha<br>Student Head: Abeni Datta</h4>
             </div>
             <div class="members">
                 <h3>Committee Members</h3>
