--- a/Committees/C_HTML/SCC.html
+++ b/Committees/C_HTML/SCC.html
@@ -18,7 +18,7 @@
             <div class="banner">
                 <img src='../C_Logos/SCC.svg' alt='Student Counselling Committee Logo' class="logo">
                 <h1>Student Counselling Committee</h1>
-                <h4>Teacher head: Mrs.G.Bajaj<br>Student Heads: Kanika Rathi and Joanna Jacob </h4>
+                <h4>Teacher Head: Mrs. G. Bajaj<br>Student Heads: Kanika Rathi and Joanna Jacob </h4>
             </div>
             <div class="members">
                 <h3>Committee Members</h3>
