--- a/Committees/C_HTML/SSC.html
+++ b/Committees/C_HTML/SSC.html
@@ -179,7 +179,7 @@
             <div class="banner">
                 <img src='../C_Logos/SSC.svg' alt='School Safety Committee Logo' class="logo">
                 <h1>School Safety Committee</h1>
-                <h4>Teacher head: Mrs.I.Yadav & Mrs.N.Goyal<br>Student Heads: Srishti Shukla and Manas Rana</h4>
+                <h4>Teacher Heads: Mrs. I. Yadav & Mrs. N. Goyal<br>Student Heads: Srishti Shukla and Manas Rana</h4>
             </div>
             <div class="members">
                 <h3>Committee Members</h3>
