--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="keywords" content="Flying High Magazine, Flying, High, Magazine, Indian Language School, Indian, Language, School, Gaurav Shah, Sneha Mohnani, Shergill, 2020-21, 2020, 2021, History, Historic Magazine, ILS, Coded">
     <meta name="description" content="The historic 2020-21 Flying High Magazine written, designed and coded by students.">
     <meta name="robots" content="index, follow">
-    <meta name="author" content="Gaurav Shah">
+    <meta name="author" content="Gaurav Shah and Team">
     <meta name="google-site-verification" content="RC7TkAa_koNR1XtFajNFW6PfNgWbkOdE-jhFul3Stxk" />
 
 
@@ -113,42 +113,63 @@
             </div>
         </section>
 
-        <section class="principal vicep">
+        <section class="head-msgs">
+            <h2>Vice Principles' Message</h2>
+            <div class="head-msg" style="margin-top: 50px">
 
-            <div class="p-message">
-                <h2 class="p-title">Vice Principal's Message</h2>
-                <h3>Parental Responsibility</h3>
-                <p>In March 2020, no one could have imagined that COVID &ndash; 19 will still have its presence around
-                    us till now.</p>
-                <p><br></p>
-                <p>At that time, the crisis forced the education systems worldwide to find alternatives to face-to-face
-                    instruction. As a result, online teaching and learning have been used by teachers and students on an
-                    unprecedented scale. Both parents and teachers play a fundamental role in supporting students to
-                    develop these crucial attitudes, particularly in the current situation to make the most of digital
-                    learning.</p>
-                <p><br></p>
-                <p>With children currently not able to study in classrooms, the importance of learning at home is
-                    amplified and the task of supporting children&rsquo;s learning has fallen on parents at a much
-                    larger rate. This is a significant burden, particularly for those who are also teleworking and those
-                    with limited schooling themselves.</p>
-                <p><br></p>
-                <p>Parents have four roles, namely:</p>
-                <p>
-                <ol>
-                    <li>as teachers at home, by controlling the child&apos;s time and creating a learning atmosphere
-                        that is comfortable for children in doing the tasks given by the teacher;&nbsp;</li>
-                    <li>as a facilitator, because parents provide the infrastructure for their children in carrying out
-                        distance learning; &nbsp;</li>
-                    <li>as a motivator, namely, parents provide enthusiasm and support to their children in carrying out
-                        learning; and&nbsp;</li>
-                    <li>as the influence or director, where parents can guide their children in learning remotely from
-                        home.</li>
-                </ol>
-                </p>
-                <p><br></p>
-                <h3 style="text-align: right;">- Dr. Mrs. Manisha Jain</h3>
+                <div class="heads headboy">
+                    <img src="Yadav.png" alt="Mrs Yadav" class="head-img"
+                        style="width: 250px; height: 250px; border-radius: 50%; margin-bottom: 30px; margin-left: calc(50% - 125px);">
+                    <h3 style="text-align: center; font-size: 25px;">Mrs Ishita Yadhav</h3>
+                    <p style="text-align: center; font-size: 20px;">मेरी कलम से...</p><br>
+                    <p>ILS में काम करते- करते तीन दशक बीत गए । कभी तो ऐसा लगता है कि समय का पता ही नहीं चला लेकिन जब पीछे मुड़कर देखती हूँ तो स्मृति पटल पर अंकित एक चलचित्र आँखों के आगे चल पड़ता है | कभी सोच न था कि विदेशी धरती मेरी कर्मभूमि बनेगी | बड़े संकोच से एक शिक्षिका की भूमिका निभाने का संकल्प लिया | नि:संदेह यह यात्रा उतनी आसान नहीं थी परंतु मन के कोने में ये पंक्तियाँ सदा गूँजती रहीं --</p><br>
+                    <p>तू न थकेगा कभी,</p>
+                    <p>तू न रुकेगा कभी,</p>
+                    <p>तू न मुड़ेगा कभी,</p>
+                    <p>कर शपथ, कर शपथ, कर शपथ !</p> <br>
+                    <p>प्रतिदिन सूर्योदय के साथ ही विद्यालय जाने की तैयारी शुरू हो जाती है। ILS के प्रांगण में प्रार्थना सभा, बच्चों की गूंज और फिर एक के बाद एक पीरियड की घंटी और उसी के अनुसार कक्षा में पढ़ाने के लिए जाना। वो Annual Day , Sports Day , PTM , Bal Din &nbsp;, Elections और न जाने कितनी प्रतियोगिताएँ | प्रति वर्ष काम में नवीनता , प्रतिस्पर्धा , कुछ नया करने की तीव्र इच्छा सदा बनी रही &nbsp;ILS मेरे जीवन का एक महत्वपूर्ण अंग बन गया ।</p><br>
+                    <p>हर वर्ष नए बच्चे आते हैं और कुछ &nbsp;छोड़कर चले जाते हैं । मैं बड़ा गर्व अनुभव करती हूँ जब पुराने विद्यार्थियों को विश्व के कोने - कोने में उच्च पदों पर आसीन देखती हूँ | मेरे साथ कार्य करने वाली कई अध्यापिकाएं स्कूल छोड़कर जा चुकी हैं लेकिन आज भी उन सब की याद मेरे मन में बनी हुई है ।&nbsp;</p>
+                    <p>इन तीन दशकों में ILS की प्रगति देखकर मन हर्षित हो उठता है। ईश्वर से यही प्रार्थना है कि ILS परिवार इसी तरह प्रगति पथ पर अग्रसर होता रहे।</p><br>
+                    <p style='text-align: right; font-weight: bold;'>ईशिता यादव&nbsp;</p>
+                    <p><br></p>
+
+                </div>
+                <div class="heads headgirl">
+                    <img src="Jain.png" alt="Mrs Jain" class="head-img"
+                        style="width: 250px; height: 250px; border-radius: 50%; margin-bottom: 30px; margin-left: calc(50% - 125px);">
+                    <h3 style="text-align: center; font-size: 25px;">Mrs Manisha Jain</h3>
+                    <p style="text-align: center; font-size: 20px;">Parental Responsibility</p><br>
+                    <p>In March 2020, no one could have imagined that COVID &ndash; 19 will still have its presence around
+                        us till now.</p>
+                    <p><br></p>
+                    <p>At that time, the crisis forced the education systems worldwide to find alternatives to face-to-face
+                        instruction. As a result, online teaching and learning have been used by teachers and students on an
+                        unprecedented scale. Both parents and teachers play a fundamental role in supporting students to
+                        develop these crucial attitudes, particularly in the current situation to make the most of digital
+                        learning.</p>
+                    <p><br></p>
+                    <p>With children currently not able to study in classrooms, the importance of learning at home is
+                        amplified and the task of supporting children&rsquo;s learning has fallen on parents at a much
+                        larger rate. This is a significant burden, particularly for those who are also teleworking and those
+                        with limited schooling themselves.</p>
+                    <p><br></p>
+                    <p>Parents have four roles, namely:</p>
+                    <p>
+                    <ol>
+                        <li>as teachers at home, by controlling the child&apos;s time and creating a learning atmosphere
+                            that is comfortable for children in doing the tasks given by the teacher;&nbsp;</li>
+                        <li>as a facilitator, because parents provide the infrastructure for their children in carrying out
+                            distance learning; &nbsp;</li>
+                        <li>as a motivator, namely, parents provide enthusiasm and support to their children in carrying out
+                            learning; and&nbsp;</li>
+                        <li>as the influence or director, where parents can guide their children in learning remotely from
+                            home.</li>
+                    </ol>
+                    </p>
+                    <p><br></p>
+                    <h3 style="text-align: right;">- Dr. Mrs. Manisha Jain</h3>
+                </div>
             </div>
-            <img src="Jain.png" alt="Vice Principal Image " class="p-img vp-img">
         </section>
 
         <section>
@@ -208,9 +229,9 @@
             <h2>ILS Congratulates Mrs Ishita Yadav on completing 30 glorious years!</h2>
             <button class="page-card button" onclick='window.location.href="HomePage/Yadav.html"'
                 style="padding: 10px; font-size: 20px; border-radius: 50px; width: 200px; margin-left: calc(50% - 100px); border: none; outline: none; cursor: pointer;">
-                Read Article </button>
+                See Pictures </button>
         </section>
-
+<!--ADD IMAGES FROM 30 YEAR PARTY-->
         <section class="head-msgs">
             <h2>Student Heads' Message</h2>
             <div class="head-msg" style="margin-top: 50px">
