--- a/more.html
+++ b/more.html
@@ -15,7 +15,7 @@
     <nav>
         <div class="menu">
             <div class="headings">
-                <div class="nav home"><a href='HomePage/home2.html' target='_blank'>Home</a></div>
+                <div class="nav home"><a href='index.html' target='_blank'>Home</a></div>
                 <div class="nav articles"><a href='Student_council/council.html' target='_blank'>Student Council</a></div>
                 <div class="nav gallery"><a href='./Committees/C_List.html' target='_blank'>Committees</a></div>
                 <div class="nav teachers"><a href='./Laurels/Laurels.html' target='_blank'>Laurels</a></div>
