18th October Changes

--- a/Laurels/Laurels.html
+++ b/Laurels/Laurels.html
@@ -99,7 +99,7 @@
 
         <tr>
             <td>1.</td>
-            <td>Global High School Investment Competition</td>
+            <td><a href="https://drive.google.com/file/d/1Q3dXAzOqTSZcYxW_I0P4DoH3cWQY6E0m/view?usp=sharing">Global High School Investment Competition</a></td>
             <td>
                 <ol>
                     <li>Gaurav Shah (XI)</li>
@@ -135,7 +135,7 @@
 
         <tr>
             <td>3.</td>
-            <td>Toycathon</td>
+            <td><a href="https://drive.google.com/file/d/1Q46ANnlmZeODWwJOF4-2xju1jpzWVw3_/view?usp=sharing">Toycathon</td>
             <td>
                 <ol>
                     <li>Gaurav Shah (XI)</li>
@@ -174,7 +174,7 @@
 
         <tr>
             <td>5.</td>
-            <td>Notebook Zero Hour International Online Inter School Debate</td>
+            <td><a href="https://drive.google.com/file/d/1YU6o7j9gsdobnAhiYOFPULxuizEgjlon/view">Notebook Zero Hour International Online Inter School Debate</a></td>
             <td>
                 <ul>
                     <li>Megha gopikuttan (X)</li>
@@ -188,7 +188,7 @@
 
         <tr>
             <td>6.</td>
-            <td>Arachwin Online Interschool Debate</td>
+            <td><a href="https://youtu.be/FaXlpBdc79g">Arachwin Online Interschool Debate</a></td>
             <td>
                 <ul>
                     <li>Manas Aggarwal</li>
@@ -235,7 +235,7 @@
 
         <tr>
             <td>9.</td>
-            <td>PATHOS Model United Nations, November 2020
+            <td><a href="https://drive.google.com/file/d/1gEW-O40C_rxtcNDXCOamCCCVSo7XvkGz/view">PATHOS Model United Nations, November 2020
             </td>
             <td>
                 <ul>
@@ -256,7 +256,7 @@
 
         <tr>
             <td>10.</td>
-            <td>Kalam Centre International Search Collaboration</td>
+            <td><a href="https://youtu.be/UTAe38V7E4g">Kalam Centre International Search Collaboration</a></td>
             <td>
                 <ul>
                     <li> Vishva Rajeev (VI)</li>
@@ -270,7 +270,7 @@
 
         <tr>
             <td>11.</td>
-            <td>Bricsmath.com+</td>
+            <td><a href="https://drive.google.com/file/d/1ig6451FxVqMTqIr2E1_teQncJeyNA1In/view">Bricsmath.com</a></td>
             <td>
                 <ul>
                     <li>Kunal S. Vasnani (III)</li>
@@ -316,7 +316,7 @@
 
         <tr>
             <td>14.</td>
-            <td>WhiteHat Jr. Live Online Coding</td>
+            <td><a href="https://youtu.be/Z3olEPtVsrM">WhiteHat Jr. Live Online Coding Competition</a></td>
             <td>
                 <ul>
                     <li>Dhruv Rathi (II)</li>
@@ -339,7 +339,7 @@
 
         <tr>
             <td>15.</td>
-            <td>Zenik International Olympiad</td>
+            <td><a href="https://youtu.be/jvFFGl3gc3c">Zenik International Olympiad</a></td>
             <td>
                 <ul>
                     <li>Avika Kothari (III)</li>
@@ -374,7 +374,7 @@
 
         <tr>
             <td>17.</td>
-            <td>International Reasoning & Aptitude Olympiad </td>
+            <td><a href="https://drive.google.com/file/d/1a7Ori_uUFgtxJ3xYqi4mCP9Bom0_Xhfp/view">International Reasoning & Aptitude Olympiad</a></td>
             <td>
                 <ul>
                     <li>Shreeyaa Soni (I)</li>
@@ -390,7 +390,7 @@
 
         <tr>
             <td>18.</td>
-            <td>Hummingbird Olympiad</td>
+            <td><a href="https://youtube.com/shorts/Sj7toj1vVo4?feature=share">Hummingbird Olympiad</a></td>
             <td>
                 <ul>
                     <li>Saamarth Sharma (I)</li>
@@ -404,7 +404,7 @@
 
         <tr>
             <td>19.</td>
-            <td>Srijnoday 2021 Vivekanand Smriti Smaroh - Bhavoday</td>
+            <td><a href="https://youtu.be/Oplpzi42N0Y">Srijnoday 2021 Vivekanand Smriti Smaroh - Bhavoday</a></td>
             <td>
                 <ul>
                     <li>Dakshya Chandra Sakthivel (UKG)</li>
@@ -419,7 +419,7 @@
 
         <tr>
             <td>20.</td>
-            <td>Kshitij - 22nd International Child Art Exhibition 2020<br>(Painting Catagory)</td>
+            <td><a href="https://youtube.com/shorts/7T5toAxm9wo?feature=share">Kshitij - 22nd International Child Art Exhibition 2020<br>(Painting Catagory)</a></td>
             <td>
                 <ul>
                     <li>Vihana Kabra (I)</li>
@@ -505,7 +505,7 @@
 
         <tr>
             <td>26.</td>
-            <td>Get. Set. Parent. Story Telling Competition</td>
+            <td><a href="https://youtu.be/ATQ-L14Qc9U">Get .Set. Parent. Story Telling Competition</a></td>
             <td>
                 <ul>
                     <li>
@@ -531,7 +531,7 @@
 
         <tr>
             <td>28.</td>
-            <td>Cricket Quiz By Prolific Minds</td>
+            <td><a href="https://drive.google.com/file/d/1tVu6Gs6tTYZjBbmuQO3RaZtne1r5KkW1/view">Cricket Quiz By Prolific Minds</a></td>
             <td>
                 <ul>
                     <li>
