--- a/Gallery/Timeline/Year at a glance.html
+++ b/Gallery/Timeline/Year at a glance.html
@@ -14,7 +14,7 @@
 
 <body>
     <h1>Year at a glance</h1>
-    <p style="text-align: center; width: 100vw; padding: 10vw;">Click on the youtube icons to see the newsletter of the month.</p>
+    <p style="text-align: center; width: 100vw; padding: 20px 10vw; background-color: #0D1321;">Click on the youtube icons to see the newsletter of the month.</p>
     <div class="line"></div>
     <div class="content">
         <div class="month april-may">
