--- a/HomePage/Yadav.html
+++ b/HomePage/Yadav.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <h1>My 30 Glorious Years</h1>
+    <h1>30 Glorious Years</h1>
     <img src="" alt="Mrs Yadav Celebration" class="img">
 
     <style>
