--- a/index.html
+++ b/index.html
@@ -114,26 +114,8 @@
         </section>
 
         <section class="head-msgs">
-            <h2>Vice Principles' Message</h2>
+            <h2>Vice Principals' Message</h2>
             <div class="head-msg" style="margin-top: 50px">
-
-                <div class="heads headboy">
-                    <img src="Yadav.png" alt="Mrs Yadav" class="head-img"
-                        style="width: 250px; height: 250px; border-radius: 50%; margin-bottom: 30px; margin-left: calc(50% - 125px);">
-                    <h3 style="text-align: center; font-size: 25px;">Mrs Ishita Yadhav</h3>
-                    <p style="text-align: center; font-size: 20px;">मेरी कलम से...</p><br>
-                    <p>ILS में काम करते- करते तीन दशक बीत गए । कभी तो ऐसा लगता है कि समय का पता ही नहीं चला लेकिन जब पीछे मुड़कर देखती हूँ तो स्मृति पटल पर अंकित एक चलचित्र आँखों के आगे चल पड़ता है | कभी सोच न था कि विदेशी धरती मेरी कर्मभूमि बनेगी | बड़े संकोच से एक शिक्षिका की भूमिका निभाने का संकल्प लिया | नि:संदेह यह यात्रा उतनी आसान नहीं थी परंतु मन के कोने में ये पंक्तियाँ सदा गूँजती रहीं --</p><br>
-                    <p>तू न थकेगा कभी,</p>
-                    <p>तू न रुकेगा कभी,</p>
-                    <p>तू न मुड़ेगा कभी,</p>
-                    <p>कर शपथ, कर शपथ, कर शपथ !</p> <br>
-                    <p>प्रतिदिन सूर्योदय के साथ ही विद्यालय जाने की तैयारी शुरू हो जाती है। ILS के प्रांगण में प्रार्थना सभा, बच्चों की गूंज और फिर एक के बाद एक पीरियड की घंटी और उसी के अनुसार कक्षा में पढ़ाने के लिए जाना। वो Annual Day , Sports Day , PTM , Bal Din &nbsp;, Elections और न जाने कितनी प्रतियोगिताएँ | प्रति वर्ष काम में नवीनता , प्रतिस्पर्धा , कुछ नया करने की तीव्र इच्छा सदा बनी रही &nbsp;ILS मेरे जीवन का एक महत्वपूर्ण अंग बन गया ।</p><br>
-                    <p>हर वर्ष नए बच्चे आते हैं और कुछ &nbsp;छोड़कर चले जाते हैं । मैं बड़ा गर्व अनुभव करती हूँ जब पुराने विद्यार्थियों को विश्व के कोने - कोने में उच्च पदों पर आसीन देखती हूँ | मेरे साथ कार्य करने वाली कई अध्यापिकाएं स्कूल छोड़कर जा चुकी हैं लेकिन आज भी उन सब की याद मेरे मन में बनी हुई है ।&nbsp;</p>
-                    <p>इन तीन दशकों में ILS की प्रगति देखकर मन हर्षित हो उठता है। ईश्वर से यही प्रार्थना है कि ILS परिवार इसी तरह प्रगति पथ पर अग्रसर होता रहे।</p><br>
-                    <p style='text-align: right; font-weight: bold;'>ईशिता यादव&nbsp;</p>
-                    <p><br></p>
-
-                </div>
                 <div class="heads headgirl">
                     <img src="Jain.png" alt="Mrs Jain" class="head-img"
                         style="width: 250px; height: 250px; border-radius: 50%; margin-bottom: 30px; margin-left: calc(50% - 125px);">
@@ -169,6 +151,24 @@
                     <p><br></p>
                     <h3 style="text-align: right;">- Dr. Mrs. Manisha Jain</h3>
                 </div>
+                <div class="heads headboy">
+                    <img src="Yadav.png" alt="Mrs Yadav" class="head-img"
+                        style="width: 250px; height: 250px; border-radius: 50%; margin-bottom: 30px; margin-left: calc(50% - 125px);">
+                    <h3 style="text-align: center; font-size: 25px;">Mrs Ishita Yadhav</h3>
+                    <p style="text-align: center; font-size: 20px;">मेरी कलम से...</p><br>
+                    <p>ILS में काम करते- करते तीन दशक बीत गए । कभी तो ऐसा लगता है कि समय का पता ही नहीं चला लेकिन जब पीछे मुड़कर देखती हूँ तो स्मृति पटल पर अंकित एक चलचित्र आँखों के आगे चल पड़ता है | कभी सोच न था कि विदेशी धरती मेरी कर्मभूमि बनेगी | बड़े संकोच से एक शिक्षिका की भूमिका निभाने का संकल्प लिया | नि:संदेह यह यात्रा उतनी आसान नहीं थी परंतु मन के कोने में ये पंक्तियाँ सदा गूँजती रहीं --</p><br>
+                    <p>तू न थकेगा कभी,</p>
+                    <p>तू न रुकेगा कभी,</p>
+                    <p>तू न मुड़ेगा कभी,</p>
+                    <p>कर शपथ, कर शपथ, कर शपथ !</p> <br>
+                    <p>प्रतिदिन सूर्योदय के साथ ही विद्यालय जाने की तैयारी शुरू हो जाती है। ILS के प्रांगण में प्रार्थना सभा, बच्चों की गूंज और फिर एक के बाद एक पीरियड की घंटी और उसी के अनुसार कक्षा में पढ़ाने के लिए जाना। वो Annual Day , Sports Day , PTM , Bal Din &nbsp;, Elections और न जाने कितनी प्रतियोगिताएँ | प्रति वर्ष काम में नवीनता , प्रतिस्पर्धा , कुछ नया करने की तीव्र इच्छा सदा बनी रही &nbsp;ILS मेरे जीवन का एक महत्वपूर्ण अंग बन गया ।</p><br>
+                    <p>हर वर्ष नए बच्चे आते हैं और कुछ &nbsp;छोड़कर चले जाते हैं । मैं बड़ा गर्व अनुभव करती हूँ जब पुराने विद्यार्थियों को विश्व के कोने - कोने में उच्च पदों पर आसीन देखती हूँ | मेरे साथ कार्य करने वाली कई अध्यापिकाएं स्कूल छोड़कर जा चुकी हैं लेकिन आज भी उन सब की याद मेरे मन में बनी हुई है ।&nbsp;</p>
+                    <p>इन तीन दशकों में ILS की प्रगति देखकर मन हर्षित हो उठता है। ईश्वर से यही प्रार्थना है कि ILS परिवार इसी तरह प्रगति पथ पर अग्रसर होता रहे।</p><br>
+                    <p style='text-align: right; font-weight: bold;'>ईशिता यादव&nbsp;</p>
+                    <p><br></p>
+
+                </div>
+
             </div>
         </section>
 
